--- a/training-tracker-client/src/app/components/sidenav/sidenav.component.html
+++ b/training-tracker-client/src/app/components/sidenav/sidenav.component.html
@@ -248,7 +248,10 @@
 
       <ul class="md:flex-col md:min-w-full flex flex-col list-none">
         <li class="items-center">
-          <a href="./dashboard.html" class="text-xs uppercase py-3 font-bold block text-pink-500 hover:text-pink-600">
+          <a
+            [routerLink]="['/dashboard']"
+            class="text-xs uppercase py-3 font-bold block text-pink-500 hover:text-pink-600"
+          >
             <i class="fas fa-tv mr-2 text-sm opacity-75"></i>
             Dashboard
           </a>
@@ -256,7 +259,7 @@
 
         <li class="items-center">
           <a
-            href="./settings.html"
+            [routerLink]="['/settings']"
             class="text-xs uppercase py-3 font-bold block text-blueGray-700 hover:text-blueGray-500"
           >
             <i class="fas fa-tools mr-2 text-sm text-blueGray-300"></i>
