--- a/training-tracker-client/src/app/pages/dashboard/dashboard.component.html
+++ b/training-tracker-client/src/app/pages/dashboard/dashboard.component.html
@@ -138,6 +138,7 @@
                       "
                     >
                       <i class="far fa-chart-bar"></i>
+                      <fa-icon [icon]="faChartBar"></fa-icon>
                     </div>
                   </div>
                 </div>
