--- a/training-tracker-client/src/app/components/sidenav/sidenav.component.html
+++ b/training-tracker-client/src/app/components/sidenav/sidenav.component.html
@@ -108,11 +108,11 @@
             <span
               class="w-12 h-12 text-sm text-white bg-blueGray-200 inline-flex items-center justify-center rounded-full"
             >
-              <img
+              <!--<img
                 alt="..."
                 class="w-full rounded-full align-middle border-none shadow-lg"
                 src="../../assets/img/team-1-800x800.jpg"
-              />
+              />-->
             </span>
           </div>
         </a>
