--- a/training-tracker-client/src/app/pages/dashboard/dashboard.component.html
+++ b/training-tracker-client/src/app/pages/dashboard/dashboard.component.html
@@ -66,11 +66,11 @@
             <span
               class="w-12 h-12 text-sm text-white bg-blueGray-200 inline-flex items-center justify-center rounded-full"
             >
-              <img
+              <!--<img
                 alt="..."
                 class="w-full rounded-full align-middle border-none shadow-lg"
                 src="../../assets/img/team-1-800x800.jpg"
-              />
+              />-->
             </span>
           </div>
         </a>
@@ -273,22 +273,7 @@
   <div class="px-4 md:px-10 mx-auto w-full -m-24">
     <div class="flex flex-wrap">
       <div class="w-full xl:w-8/12 mb-12 xl:mb-0 px-4">
-        <div class="relative flex flex-col min-w-0 break-words w-full mb-6 shadow-lg rounded bg-blueGray-700">
-          <div class="rounded-t mb-0 px-4 py-3 bg-transparent">
-            <div class="flex flex-wrap items-center">
-              <div class="relative w-full max-w-full flex-grow flex-1">
-                <h6 class="uppercase text-blueGray-100 mb-1 text-xs font-semibold">Overview</h6>
-                <h2 class="text-white text-xl font-semibold">Sales value</h2>
-              </div>
-            </div>
-          </div>
-          <div class="p-4 flex-auto">
-            <!-- Chart -->
-            <div class="relative h-350-px">
-              <canvas id="line-chart"></canvas>
-            </div>
-          </div>
-        </div>
+        <app-run-chart></app-run-chart>
       </div>
       <div class="w-full xl:w-4/12 px-4">
         <div class="relative flex flex-col min-w-0 break-words bg-white w-full mb-6 shadow-lg rounded">
