Add custom chart.js wrapper component

--- a/training-tracker-client/src/app/components/charts/run-chart/run-chart.component.html
+++ b/training-tracker-client/src/app/components/charts/run-chart/run-chart.component.html
@@ -14,7 +14,7 @@
   <div class="p-4 flex-auto">
     <!-- Chart -->
     <div class="relative" style="height: 350px;">
-      <canvas id="line-chart"></canvas>
+      <app-chart [type]="'line'" [datasets]="datasets" [labels]="['January', 'February', 'March', 'April', 'May', 'June', 'July']"></app-chart>
     </div>
   </div>
 </div>
