--- a/training-tracker-client/src/app/pages/dashboard/dashboard.component.html
+++ b/training-tracker-client/src/app/pages/dashboard/dashboard.component.html
@@ -274,6 +274,8 @@
     <div class="flex flex-wrap">
       <div class="w-full xl:w-8/12 mb-12 xl:mb-0 px-4">
         <app-run-chart></app-run-chart>
+        <!--<app-chart [type]="'line'" [datasets]='[{data: [1, 2, 3]}]' [labels]="['Test', 'Test2', 'Test3']"></app-chart>-->
+
       </div>
       <div class="w-full xl:w-4/12 px-4">
         <div class="relative flex flex-col min-w-0 break-words bg-white w-full mb-6 shadow-lg rounded">
