--- a/training-tracker-client/src/app/components/sidenav/sidenav.component.html
+++ b/training-tracker-client/src/app/components/sidenav/sidenav.component.html
@@ -250,7 +250,7 @@
         <li class="items-center">
           <a
             [routerLink]="['/dashboard']"
-            class="text-xs uppercase py-3 font-bold block text-pink-500 hover:text-pink-600"
+            class="text-xs uppercase py-3 font-bold block text-blue-500 hover:text-blue-600"
           >
             <i class="fas fa-tv mr-2 text-sm opacity-75"></i>
             Dashboard
