--- a/training-tracker-client/src/app/pages/dashboard/dashboard.component.html
+++ b/training-tracker-client/src/app/pages/dashboard/dashboard.component.html
@@ -108,7 +108,7 @@
     </div>
   </nav>
   <!-- Header -->
-  <div class="relative bg-pink-600 md:pt-32 pb-32 pt-12">
+  <div class="relative bg-blue-500 md:pt-32 pb-32 pt-12">
     <div class="px-4 md:px-10 mx-auto w-full">
       <div>
         <!-- Card stats -->
